syntax = "proto3";

package proto;

import "google/api/annotations.proto";

message MedallionId {
    string Id = 1;
}

message CabTripCount {
    string Medallion = 1;
    int64 Count = 2;
}

message CabTripsRequest {
    repeated MedallionId Medallions = 1;
    bool SkipCache = 2;
    string Date = 3;
}

message CabTripsResponse {
    repeated CabTripCount Results = 1;
}

service Cab {
    rpc GetCabTripsCount(CabTripsRequest) returns (CabTripsResponse) {
        option (google.api.http) = {
        post: "/cab/trips"
        body: "*"
    };
   }
}
